# ARAGON-LIKE-DAO

./: .gitignore  README.md
backend/: .gitignore  main.py
backend/Contracts/: Cargo.toml
backend/Contracts/TokenContract/: Cargo.toml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: Token.ts  contract.ts  index.ts
frontend/styles/: contract.css  landing.css
frontend/templates/: ContractBuilder.htm  index.htm
